# etl_project

./: .env.example  pyproject.toml
.github/workflows/: ci.yml
data/output/: output.xlsx
src/: main.py
src/pipeline/: extract.py  load.py  transform.py
tests/: conftest.py  test_pipeline_transform.py
